# University

./: .gitattributes  LICENSE  Program.cs  README.md
1 курс/C Labs/: lab_1.c  lab_10.c  lab_1_ex.c  lab_4.c  lab_5.c  lab_6.c  lab_8.c  lab_9.c
3 курс/OOP/: UML ООП.html
3 курс/OOP/lab5/Lib/: CMakeLists.txt  IntegralCalculator.cs  Lib.csproj  Makefile  cmake_install.cmake
Arduino/: Lab1Task1.ino  Lab1Task2.ino  Lab1Task3.ino  sketch_sep07a.ino  sketch_sep07c.ino
Artificial neural networks/: lab1.py  lab2.py
C Labs/: lab_11-12.c  lab_2.c  lab_3.c  lab_3_for.c  lab_7.c
C_Labs/: lab_1.c  lab_10.c  lab_11-12.c  lab_1_ex.c  lab_2.c  lab_3.c  lab_3_for.c  lab_4.c  lab_5.c  lab_6.c  lab_7.c  lab_8.c  lab_9.c
Data processing/: requirements.txt
Educational Practice 3/: settings.gradle.kts
Educational practice/: README.md  UpgradeLog.htm
Graduate Work/: Выпускная квалификационная работа Речук Д.М. 606-12.docx  Речук Дмитрий Максимович Курсовая работа Проектирование и эксплуатация ИиЭС.docx
Networks and telecommunications/: 1.1.pkt  1.2.pkt.pkt  1.2.pkt.pkz  2.5.5-packet-tracer---configure-initial-switch-settings_ru-RU.pka  2.7.6-packet-tracer---implement-basic-connectivity_ru-RU.pka  Практическая работа №1, пункты 2.3.7 и 2.5.5.docx  Практическая работа №2, пункты 2.3.7 и 2.5.5.docx  Практическая работа №3, пункты 2.7.6 и 2.9.1.docx
OOP/: UML ООП.drawio
Optimization methods/: Plane.py  SaveGirl.py
Programming technologies/: test.py
Programming technologies/Lab1-Arkanoid/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  CMakeLists.txt  Console.cpp  Console.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Grid.cpp  Grid.h  Level.cpp  Level.h  MathHelper.h  NearlyEqual.cpp  NearlyEqual.h  Platform.cpp  Platform.h  Point.h  Time.cpp  Time.h  Wall.cpp  Wall.h  main.cpp
Python_Labs/: 02_operations.py  06_songs_list.py  08_garden.py
SPO/: lab1.sh  screenshot.c
Time series/: lab1.py
(+1448 files in other folders)
